script_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: script-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: script
  template:
    metadata:
      labels:
        app: script
    spec:
      containers:
        - name: script-container
          image: sima/script
          # ports:
          #   - containerPort: 8001
