app_virtual_service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - app-ingress-gateway
  http:
  - match:
    - uri:
        exact: /time
    route:
    - destination:
        host: web-service
        port:
          number: 80
  - match:
    - uri:
        exact: /statistics
    route:
    - destination:
        host: web-service
        port:
          number: 80
